# SuperGZip

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_issue.yaml  feature_issue.yaml
.github/workflows/: release.yaml
src/: main.rs
